--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <main></main>
+    <main>
+      <section class="wrapper">
+        <article class="card card--purple">
+          <img
+            src="https://png.pngtree.com/background/20230411/original/pngtree-natural-landscape-snow-mountain-background-picture-image_2390197.jpg"
+            alt="" />
+
+          <div class="card__informations">
+            <h2>Camellia Hills, Hatton</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, officiis?</p>
+            <button>Learn More</button>
+          </div>
+        </article>
+
+        <article class="card card--yellow">
+          <img src="https://www.gettyimages.com/gi-resources/images/500px/983794168.jpg" alt="" />
+
+          <div class="card__informations">
+            <h2>Lake at night</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet ratione iste!</p>
+            <button>Learn More</button>
+          </div>
+        </article>
+
+        <article class="card card--orange">
+          <img src="https://t4.ftcdn.net/jpg/06/39/88/39/240_F_639883908_ufHyBP8klKkDAzEmTFiGDR37uduajAfK.jpg" alt="" />
+
+          <div class="card__informations">
+            <h2>Man Sitting on High Rise</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <button>Learn More</button>
+          </div>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
