--- a/index.html
+++ b/index.html
@@ -15,19 +15,17 @@
         <article class="card card--purple">
           <img
             src="https://png.pngtree.com/background/20230411/original/pngtree-natural-landscape-snow-mountain-background-picture-image_2390197.jpg"
-            alt="" />
-
-          <div class="card__informations">
+            alt="Lorem ipsum" />
+          <div class="card__information">
             <h2>Camellia Hills, Hatton</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, officiis?</p>
             <button>Learn More</button>
           </div>
         </article>
 
-        <article class="card card--yellow">
-          <img src="https://www.gettyimages.com/gi-resources/images/500px/983794168.jpg" alt="" />
-
-          <div class="card__informations">
+        <article class="card card--blue">
+          <img src="https://www.gettyimages.com/gi-resources/images/500px/983794168.jpg" alt="Lorem ipsum" />
+          <div class="card__information">
             <h2>Lake at night</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet ratione iste!</p>
             <button>Learn More</button>
@@ -35,11 +33,15 @@
         </article>
 
         <article class="card card--orange">
-          <img src="https://t4.ftcdn.net/jpg/06/39/88/39/240_F_639883908_ufHyBP8klKkDAzEmTFiGDR37uduajAfK.jpg" alt="" />
-
-          <div class="card__informations">
+          <img
+            src="https://t4.ftcdn.net/jpg/06/39/88/39/240_F_639883908_ufHyBP8klKkDAzEmTFiGDR37uduajAfK.jpg"
+            alt="Lorem ipsum" />
+          <div class="card__information">
             <h2>Man Sitting on High Rise</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit tenetur neque facere nostrum pariatur
+              velit eius aperiam architecto sint modi.
+            </p>
             <button>Learn More</button>
           </div>
         </article>
